objects/VolunteerInitiative.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDO_Golden_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This record is used to indicate golden records in the IDO. Check the IDO Record Description Field for more information.</description>
        <inlineHelpText>This record is used to indicate golden records in the IDO. Check the IDO Record Description Field for more information.</inlineHelpText>
        <label>IDO Golden Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDO_Record_Description__c</fullName>
        <description>This field is used to provide a description on what types of demo this record can be used for. Intention is for this to be used by IDO agent.</description>
        <inlineHelpText>This field is used to provide a description on what types of demo this record can be used for.</inlineHelpText>
        <label>IDO Record Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Start_Date_and_End_Date</fullName>
        <active>true</active>
        <description>Start Date must be less than or equal to End Date.</description>
        <errorConditionFormula>StartDate  &gt;=  EndDate</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>Start Date must be less than or equal to End Date.</errorMessage>
    </validationRules>
</CustomObject>